// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > Snapshots tests > should matches the snapshot with label="Example link" and href="http://example.com" 1`] = `
<DocumentFragment>
  <a
    class="_link_1f0167 _link--underline-hover_1f0167"
    href="http://example.com"
  >
    Example link
  </a>
</DocumentFragment>
`;

exports[`Link > Snapshots tests > should mathces the snapshot with classname passed in props 1`] = `
<DocumentFragment>
  <a
    class="_link_1f0167 _link--underline-hover_1f0167 additionalClassName"
    href="http://example.com"
  >
    Example link
  </a>
</DocumentFragment>
`;

exports[`Link > Snapshots tests > should mathces the snapshot with classname passed in props 2`] = `
<DocumentFragment>
  <a
    class="_link_1f0167 _link--underline-hover_1f0167 additionalClassName"
    href="http://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Example link
    <svg
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        id="Interface / External_Link"
      >
        <path
          d="M10.0002 5H8.2002C7.08009 5 6.51962 5 6.0918 5.21799C5.71547 5.40973 5.40973 5.71547 5.21799 6.0918C5 6.51962 5 7.08009 5 8.2002V15.8002C5 16.9203 5 17.4801 5.21799 17.9079C5.40973 18.2842 5.71547 18.5905 6.0918 18.7822C6.5192 19 7.07899 19 8.19691 19H15.8031C16.921 19 17.48 19 17.9074 18.7822C18.2837 18.5905 18.5905 18.2839 18.7822 17.9076C19 17.4802 19 16.921 19 15.8031V14M20 9V4M20 4H15M20 4L13 11"
          id="Vector"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </g>
    </svg>
  </a>
</DocumentFragment>
`;
